--- a/app.json
+++ b/app.json
@@ -23,7 +23,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.mehchow.rnssdm"
     },
     "web": {
       "bundler": "metro",
