--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@react-navigation/drawer": "^7.5.6",
     "@react-navigation/native": "^7.1.17",
     "@rn-primitives/avatar": "~1.2.0",
     "@rn-primitives/checkbox": "^1.2.0",
@@ -26,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "^53.0.20",
+    "expo-blur": "~14.1.5",
     "expo-dev-client": "~5.2.4",
     "expo-linking": "~7.1.7",
     "expo-navigation-bar": "~4.2.7",
@@ -39,6 +41,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.62.0",
     "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-otp-entry": "^1.8.5",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
