--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/progress": "~1.2.0",
     "@rn-primitives/slot": "~1.2.0",
+    "@rn-primitives/switch": "^1.2.0",
     "@rn-primitives/tooltip": "~1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
