home page ui done

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@rn-primitives/progress": "~1.2.0",
     "@rn-primitives/slot": "~1.2.0",
     "@rn-primitives/switch": "^1.2.0",
+    "@rn-primitives/table": "^1.2.0",
     "@rn-primitives/tooltip": "~1.2.0",
+    "@shopify/flash-list": "1.7.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "^53.0.20",
@@ -45,6 +47,7 @@
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-otp-entry": "^1.8.5",
+    "react-native-popup-menu": "^0.18.0",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1",
