--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/progress": "~1.2.0",
+    "@rn-primitives/select": "^1.2.0",
     "@rn-primitives/slot": "~1.2.0",
     "@rn-primitives/switch": "^1.2.0",
     "@rn-primitives/table": "^1.2.0",
@@ -34,6 +35,7 @@
     "expo": "^53.0.20",
     "expo-blur": "~14.1.5",
     "expo-dev-client": "~5.2.4",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
     "expo-navigation-bar": "~4.2.7",
     "expo-router": "~5.1.4",
