--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.1.8",
     "@hookform/resolvers": "^5.2.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/drawer": "^7.5.6",
     "@react-navigation/native": "^7.1.17",
     "@rn-primitives/avatar": "~1.2.0",
