--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo": "^53.0.20",
     "expo-blur": "~14.1.5",
     "expo-dev-client": "~5.2.4",
+    "expo-document-picker": "~13.1.6",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
     "expo-navigation-bar": "~4.2.7",
@@ -49,6 +50,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.62.0",
     "react-native": "0.79.5",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-otp-entry": "^1.8.5",
     "react-native-popup-menu": "^0.18.0",
