--- a/app.json
+++ b/app.json
@@ -30,7 +30,20 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-document-picker"],
+    "plugins": [
+      "expo-router",
+      "expo-document-picker",
+      [
+        "expo-asset",
+        {
+          "assets": [
+            "./assets/docs/mywill.docx",
+            "./assets/docs/ssdm.pdf",
+            "./assets/docs/rikki.jpg"
+          ]
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true
     },
