--- a/package.json
+++ b/package.json
@@ -34,13 +34,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "^53.0.20",
+    "expo-asset": "~11.1.7",
     "expo-blur": "~14.1.5",
     "expo-dev-client": "~5.2.4",
     "expo-document-picker": "~13.1.6",
+    "expo-file-system": "~18.1.11",
     "expo-image-picker": "~16.1.4",
+    "expo-intent-launcher": "~12.1.5",
     "expo-linking": "~7.1.7",
     "expo-navigation-bar": "~4.2.7",
     "expo-router": "~5.1.4",
+    "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.10",
