--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/drawer": "^7.5.6",
     "@react-navigation/native": "^7.1.17",
+    "@rn-primitives/accordion": "^1.2.0",
     "@rn-primitives/avatar": "~1.2.0",
     "@rn-primitives/checkbox": "^1.2.0",
     "@rn-primitives/dialog": "^1.2.0",
@@ -26,9 +27,11 @@
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/progress": "~1.2.0",
     "@rn-primitives/select": "^1.2.0",
+    "@rn-primitives/separator": "^1.2.0",
     "@rn-primitives/slot": "~1.2.0",
     "@rn-primitives/switch": "^1.2.0",
     "@rn-primitives/table": "^1.2.0",
+    "@rn-primitives/tabs": "^1.2.0",
     "@rn-primitives/tooltip": "~1.2.0",
     "@shopify/flash-list": "1.7.6",
     "class-variance-authority": "^0.7.1",
