--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@rn-primitives/tabs": "^1.2.0",
     "@rn-primitives/tooltip": "~1.2.0",
     "@shopify/flash-list": "1.7.6",
+    "axios": "^1.11.0",
     "babel-plugin-react-compiler": "19.0.0-beta-af1b7da-20250417",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -75,7 +76,8 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^4.0.14"
+    "zod": "^4.0.14",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
