--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@rn-primitives/tabs": "^1.2.0",
     "@rn-primitives/tooltip": "~1.2.0",
     "@shopify/flash-list": "1.7.6",
+    "@tanstack/react-query": "^5.87.1",
     "axios": "^1.11.0",
     "babel-plugin-react-compiler": "19.0.0-beta-af1b7da-20250417",
     "class-variance-authority": "^0.7.1",
@@ -74,6 +75,7 @@
     "react-native-screens": "^4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
+    "sonner-native": "^0.21.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
@@ -82,6 +84,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
+    "@tanstack/eslint-plugin-query": "^5.86.0",
     "@types/react": "~19.0.14",
     "eslint": "^9.34.0",
     "eslint-config-expo": "~9.2.0",
