--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.1.8",
     "@hookform/resolvers": "^5.2.1",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/drawer": "^7.5.6",
-    "@react-navigation/native": "^7.1.17",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/drawer": "^7.5.8",
     "@rn-primitives/accordion": "^1.2.0",
     "@rn-primitives/avatar": "~1.2.0",
     "@rn-primitives/checkbox": "^1.2.0",
@@ -34,47 +33,48 @@
     "@rn-primitives/table": "^1.2.0",
     "@rn-primitives/tabs": "^1.2.0",
     "@rn-primitives/tooltip": "~1.2.0",
-    "@shopify/flash-list": "1.7.6",
+    "@shopify/flash-list": "2.0.2",
     "@tanstack/react-query": "^5.87.1",
     "axios": "^1.11.0",
     "babel-plugin-react-compiler": "19.0.0-beta-af1b7da-20250417",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-plugin-react-compiler": "19.1.0-rc.2",
-    "expo": "^53.0.20",
-    "expo-asset": "~11.1.7",
-    "expo-blur": "~14.1.5",
-    "expo-constants": "~17.1.7",
-    "expo-dev-client": "~5.2.4",
-    "expo-device": "~7.1.4",
-    "expo-document-picker": "~13.1.6",
-    "expo-file-system": "~18.1.11",
-    "expo-image-picker": "~16.1.4",
-    "expo-intent-launcher": "~12.1.5",
-    "expo-linking": "~7.1.7",
-    "expo-navigation-bar": "~4.2.7",
-    "expo-notifications": "~0.31.4",
-    "expo-router": "~5.1.4",
-    "expo-sharing": "~13.1.5",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.10",
+    "expo": "^54.0.2",
+    "expo-asset": "~12.0.8",
+    "expo-blur": "~15.0.7",
+    "expo-constants": "~18.0.8",
+    "expo-dev-client": "~6.0.12",
+    "expo-device": "~8.0.7",
+    "expo-document-picker": "~14.0.7",
+    "expo-file-system": "~19.0.12",
+    "expo-image-picker": "~17.0.8",
+    "expo-intent-launcher": "~13.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-navigation-bar": "~5.0.8",
+    "expo-notifications": "~0.32.11",
+    "expo-router": "~6.0.1",
+    "expo-sharing": "~14.0.7",
+    "expo-splash-screen": "~31.0.9",
+    "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.7",
     "lucide-react-native": "^0.511.0",
     "nativewind": "^4.1.23",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
-    "react-native": "0.79.5",
+    "react-native": "0.81.4",
     "react-native-element-dropdown": "^2.12.4",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-international-phone-number": "^0.10.5",
     "react-native-otp-entry": "^1.8.5",
     "react-native-popup-menu": "^0.18.0",
-    "react-native-reanimated": "~3.17.5",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "^4.11.1",
-    "react-native-svg": "15.11.2",
-    "react-native-web": "~0.20.0",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "5.6.1",
+    "react-native-screens": "^4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "~0.21.1",
+    "react-native-worklets": "0.5.1",
     "sonner-native": "^0.21.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.5",
@@ -85,10 +85,10 @@
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@tanstack/eslint-plugin-query": "^5.86.0",
-    "@types/react": "~19.0.14",
+    "@types/react": "~19.1.12",
     "eslint": "^9.34.0",
-    "eslint-config-expo": "~9.2.0",
-    "typescript": "^5.8.3"
+    "eslint-config-expo": "~10.0.0",
+    "typescript": "^5.9.2"
   },
   "private": true
 }
